--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Blog de Nicolas Cantor</title>
+        <title>Blog de Nicolas Cantor V2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
